# python-auto-package-migration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  INSTALLATION_GUIDE.md  PROJECT_STATUS.md  README.md  VERIFICATION_CHECKLIST.md  install.sh  package-upgrade-agent-architecture.md  pyproject.toml  verify_installation.sh
package-upgrade/: LICENSE  QUICK_REFERENCE.md  README.md  SKILL.md
package-upgrade/references/: IMPORTANT_DEPENDENCY_UPDATE.md  PIP_LOCK_PATTERNS.md  breaking_change_patterns.md  jira_workflow.md  pip_workflow.md  poetry_workflow.md  uv_workflow.md
package-upgrade/scripts/: ast_scanner.py  dep_tree.py  detect_env.sh  fetch_changelog.py  git_diff.sh  jira_comment.py  jira_fetch.py  jira_transition.py  run_tests.sh  snapshot_env.sh
package-upgrade/templates/: report_structure.md
src/: README.md  pyproject.toml
src/auto_upgrade/: __init__.py  __main__.py  cli.py  config.py
src/auto_upgrade/llm/: __init__.py  client.py  prompts.py
src/tests/auto_upgrade/: test_cli_smoke.py  test_config.py  test_llm_client.py
