[project]
name = "auto-upgrade"
version = "0.1.0"
description = "LangGraph-based Python package upgrade agent powered by Claude 4.6"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Auto Upgrade Contributors" }]
keywords = ["langgraph", "claude", "package-upgrade", "cve", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "pipdeptree>=2.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.31",
    "unidiff>=0.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
sqlite = ["langgraph-checkpoint-sqlite>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "respx>=0.20",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.scripts]
auto-upgrade = "auto_upgrade.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_upgrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
